--- a/index.html
+++ b/index.html
@@ -85,25 +85,8 @@
   <div class="cta-section">
     <div class="container-tight">
       <div data-w-id="9a398ae0-1578-7f19-0d50-8a59db3ed439" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="cta-block">
-        <h1>Time before Mainnet</h1>
-        <div id="js-clock" data-w-id="212cae37-b729-a1d6-ef91-5e1aaa6e1a40" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="js-clock">
-          <div class="box">
-            <div id="js-clock-days" class="clock-number">00</div>
-            <div class="clock-label">Days</div>
-          </div>
-          <div class="box">
-            <div id="js-clock-hours" class="clock-number">00</div>
-            <div class="clock-label">Hrs</div>
-          </div>
-          <div class="box">
-            <div id="js-clock-minutes" class="clock-number">00</div>
-            <div class="clock-label">Min</div>
-          </div>
-          <div class="box">
-            <div id="js-clock-seconds" class="clock-number">00</div>
-            <div class="clock-label">Sec</div>
-          </div>
-        </div>
+        <h1>We are online!<br>‍</h1>
+        <h1>See our performance <a href="https://explorer.nebkas.ro/validator/crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8" target="_blank">here</a>. </h1>
       </div>
     </div>
   </div>
