--- a/guide.html
+++ b/guide.html
@@ -46,14 +46,14 @@
   <main id="main-content" class="main-content">
     <div class="black w-container">
       <div class="text-block-guide-intro w-richtext">
-        <h2>Our validator&#x27;s information</h2>
+        <h2 style="color: black;">Our validator&#x27;s information</h2>
         <p>Our validator’s name (moniker) is: <strong>cros-nest</strong></p>
         <p>Our validator’s address is: <strong>crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8</strong></p>
         <p>You can see our validator on the official Crypto.org Explorer at <a href="https://crypto.org/explorer/validator/crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8" target="_blank">this address</a>.</p>
         <p>‍</p>
       </div>
       <div class="text-block-guide-intro w-richtext">
-        <h2>How to delegate to Cro&#x27;s Nest</h2>
+        <h2 style="color: black;">How to delegate to Cro&#x27;s Nest</h2>
         <p>This guide explains you how to delegate CRO to our validator. There are two ways to delegate:</p>
         <ul role="list">
           <li>
