--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="grid-content">
           <p class="paragraph-large">Peace of mind and pioneering excellence, enabling our users to nurture their savings, relieving them of the stress and cost of independent operating.<br></p>
-          <a href="#CTA" class="button button-space w-button">How do I register?</a>
+          <a href="guide.html" class="button button-space w-button">How do I stake?</a>
         </div>
       </div>
     </div>
