--- a/guide.html
+++ b/guide.html
@@ -34,7 +34,7 @@
       <nav role="navigation" class="nav-menu-2 w-nav-menu">
         <a href="#" class="nav-link w-nav-link">Our Expertise</a>
         <a href="#" class="nav-link-2 w-nav-link">Our Promise</a>
-        <a href="#" class="nav-link-3 w-nav-link">Register</a>
+        <a href="guide.html" class="nav-link-3 w-nav-link">How to Stake?</a>
         <a href="#" class="nav-link-4 w-nav-link">FAQ</a>
         <a href="mailto:chainmaster@cros-nest.com?subject=I%20want%20to%20delegate%20on%20Cro&#x27;s%20Nest%20" class="nav-link-5 w-nav-link">Contact</a>
       </nav>
