--- a/index.html
+++ b/index.html
@@ -380,5 +380,6 @@ Choosing a well-managed, enterprise-grade service provider will mitigate all the
 })();
 </script>
 <script src="APY.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
 </body>
 </html>
