--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@ Choosing a well-managed, enterprise-grade service provider will mitigate all the
     clock('js-clock', deadline);
 })();
 </script>
-<script src="js/APY.js" type="text/javascript"></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js' type="text/javascript"></script>
+<script src="js/APY.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
 </body>
 </html>
