--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="container-tight">
       <div data-w-id="9a398ae0-1578-7f19-0d50-8a59db3ed439" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="cta-block">
         <h1>We are online!<br>‍</h1>
-        <h3>Current APY</h3><h3 id="APY" class="banner-header"></h3>
+        <h3>Current APY: 80%</h3><h3 id="APY" class="banner-header"></h3>
           <header>
       <div class="banner">
         <img src="img/logo.svg" alt="" class="logo" />
