--- a/48-hours.html
+++ b/48-hours.html
@@ -60,7 +60,9 @@
         <p>Furthering our commitment to the community, we have opened <a href="https://discord.gg/psDap3ed7C">our lobby on Discord</a>, where anyone interested in the Crypto.org Chain or Cro&#x27;s Nest and its validator is welcome to join. Our team will be happy to support our users and peers, hoping to strengthen the already collaborative and helpful community that has started to grow around this project.</p>
         <p><strong>A statement on adjusting validator parameters</strong>. We will <strong>never</strong> change any of our validator&#x27;s essential parameters (commission rate, minimum self-delegation, moniker, security contact, and website URL) without providing at least three days advanced notice other than in response to governance votes or in case of force-majeure. Notifications will take place both on our website (http://www.cros-nest.com/)  and via e-mail for all registered users. </p>
         <p>‍</p>
+        The Cro’s Nest Validator Team
         <p>‍</p>
+        
       </div>
     </div>
   </main>
