--- a/guide.html
+++ b/guide.html
@@ -57,27 +57,11 @@
         <p>This guide explains you how to delegate CRO to our validator. There are two ways to delegate:</p>
         <ul role="list">
           <li>
-            <a href="#chain-maind">Delegate using the Crypto.org Wallet Client (chain-maind)</a>
-          </li>
-          <li>
             <a href="#Desktop">Delegate using the Crypto.org Chain Desktop Wallet (Beta)</a>
           </li>
-        </ul>
-        <p>‍</p>
-      </div>
-      <div id="chain-maind" class="text-block-guide-chain-maind w-richtext">
-        <h4>Delegate using the Crypto.org Wallet Client (chain-maind)</h4>
-        <ul role="list">
-          <li>To delegate using the Crypto.org Wallet Client (chain-maind), you&#x27;ll first need to create a wallet using the documentation provided by Crypto.org. The document can be found at the <a href="https://crypto.org/docs/wallets/cli.html#build-and-configurations" target="_blank">following link.</a>
+          <li>
+            <a href="#chain-maind">Delegate using the Crypto.org Wallet Client (chain-maind)</a>
           </li>
-        </ul>
-        <ul role="list">
-          <li>Once you have create a wallet and transferred CRO to it, you can delegate to our validator using a delegation command such as:</li>
-        </ul>
-        <blockquote>./chain-maind tx staking delegate crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8 <strong>100cro</strong> --from <strong>Default</strong> --chain-id crypto-org-chain-mainnet-1 --node https://mainnet.crypto.org:26657 --gas 80000000 --gas-prices 0.1basecro</blockquote>
-        <ul role="list">
-          <li>‍<em>Note 1: </em><strong><em>100cro</em></strong><em> and </em><strong><em>Default</em></strong><em> are given as examples and will most probably have to be edited. In this example , </em><strong><em>Default </em></strong><em>is the key name that was used during the wallet creation.</em></li>
-          <li><em>Note 2: on windows and Ubuntu 20.04: use the </em><strong><em>--keyring-backend file</em></strong><em> command line parameter.</em></li>
         </ul>
       </div>
       <div id="Desktop" class="text-block-guide-desktop w-richtext">
@@ -85,7 +69,7 @@
         <h4>Delegate using the Crypto.org Chain Desktop Wallet (Beta)</h4>
         <p><strong>Prerequisites:</strong></p>
         <ul role="list">
-          <li>Download the latest version of the <a href="https://github.com/crypto-com/chain-desktop-wallet/releases/tag/v0.1.1" target="_blank">Desktop Wallet (0.1.1)</a>
+          <li>Download the latest version of the <a href="https://github.com/crypto-com/chain-desktop-wallet/releases/tag/v0.1.4" target="_blank">Desktop Wallet (0.1.4)</a>
           </li>
           <li>Use <a href="https://crypto.org/docs/wallets/ledger_desktop_wallet.html#staking-operation-with-ledger-device" target="_blank">Crypto.org&#x27;s guide</a> to create a wallet using the Desktop Wallet</li>
         </ul>
@@ -98,7 +82,7 @@
         </ul>
         <p>‍</p>
         <figure style="max-width:2562px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-          <div><img src="images/Screenshot-2021-03-25-at-11.37.38.png" loading="lazy" alt=""></div>
+          <div><img src="images/stacking_delegate_menu.png" loading="lazy" alt=""></div>
         </figure>
         <p>‍</p>
         <ul role="list">
@@ -134,8 +118,23 @@
         <figure style="max-width:2555px" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
           <div><img src="images/Screenshot-2021-03-25-at-12.08.39.png" loading="lazy" alt=""></div>
         </figure>
+      </div>
+      <div id="chain-maind" class="text-block-guide-chain-maind w-richtext">
+        <h4>Delegate using the Crypto.org Wallet Client (chain-maind)</h4>
+        <ul role="list">
+          <li>To delegate using the Crypto.org Wallet Client (chain-maind), you&#x27;ll first need to create a wallet using the documentation provided by Crypto.org. The document can be found at the <a href="https://crypto.org/docs/wallets/cli.html#build-and-configurations" target="_blank">following link.</a>
+          </li>
+        </ul>
+        <ul role="list">
+          <li>Once you have create a wallet and transferred CRO to it, you can delegate to our validator using a delegation command such as:</li>
+        </ul>
+        <blockquote><code style="color: black;">./chain-maind tx staking delegate \</br>crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8 <strong>100cro</strong> \<br>--from <strong>Default</strong> --chain-id crypto-org-chain-mainnet-1 \</br>--node https://mainnet.crypto.org:26657 --gas-prices 0.1basecro</code></blockquote>
+        <ul role="list">
+          <li>‍<em>Note 1: </em><strong><em>100cro</em></strong><em> and </em><strong><em>Default</em></strong><em> are given as examples and will most probably have to be edited. In this example , </em><strong><em>Default </em></strong><em>is the key name that was used during the wallet creation.</em></li>
+          <li><em>Note 2: on windows and Ubuntu 20.04: use the </em><strong><em>--keyring-backend file</em></strong><em> command line parameter.</em></li>
+        </ul>
         <p>‍</p>
-        <p>If you have any questions please <a href="mailto:chainmaster@cros-nest.com">contact us</a>.</p>
+        <p>If you have any questions please <a href="mailto:chainmaster@cros-nest.com">contact us</a>. or join <a href="https://discord.gg/psDap3ed7C">our lobby on Discord</a></p>
         <p>
         </p>
       </div>
@@ -166,56 +165,6 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=60462746bc5a3edd8a55b221" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-  <script>
-(function () {
-
-    var deadline = '2021/03/25 00:00';
-
-    function pad(num, size) {
-        var s = "0" + num;
-        return s.substr(s.length - size);
-    }
-
-    // fixes "Date.parse(date)" on safari
-    function parseDate(date) {
-        const parsed = Date.parse(date);
-        if (!isNaN(parsed)) return parsed
-        return Date.parse(date.replace(/-/g, '/').replace(/[a-z]+/gi, ' '));
-    }
-
-    function getTimeRemaining(endtime) {
-        let total = parseDate(endtime) - Date.parse(new Date())
-        let seconds = Math.floor((total / 1000) % 60)
-        let minutes = Math.floor((total / 1000 / 60) % 60)
-        let hours = Math.floor((total / (1000 * 60 * 60)) % 24)
-        let days = Math.floor(total / (1000 * 60 * 60 * 24))
-
-        return { total, days, hours, minutes, seconds };
-    }
-
-    function clock(id, endtime) {
-        let days = document.getElementById(id + '-days')
-        let hours = document.getElementById(id + '-hours')
-        let minutes = document.getElementById(id + '-minutes')
-        let seconds = document.getElementById(id + '-seconds')
-
-        var timeinterval = setInterval(function () {
-            var time = getTimeRemaining(endtime);
-
-            if (time.total <= 0) {
-                clearInterval(timeinterval);
-            } else {
-                days.innerHTML = pad(time.days, 2);
-                hours.innerHTML = pad(time.hours, 2);
-                minutes.innerHTML = pad(time.minutes, 2);
-                seconds.innerHTML = pad(time.seconds, 2);
-            }
-        }, 1000);
-    }
-
-    clock('js-clock', deadline);
-})();
-</script>
 </body>
 
 </html>
