[images] revert image suppression
some SVG are missing in the index

--- a/guide.html
+++ b/guide.html
@@ -69,7 +69,7 @@
         <h4>Delegate using the Crypto.org Chain Desktop Wallet (Beta)</h4>
         <p><strong>Prerequisites:</strong></p>
         <ul role="list">
-          <li>Download the latest version of the <a href="https://github.com/crypto-com/chain-desktop-wallet/releases/tag/v0.1.4" target="_blank">Desktop Wallet (0.1.4)</a>
+          <li>Download the latest version of the <a href="https://github.com/crypto-com/chain-desktop-wallet/releases/latest" target="_blank">Desktop Wallet</a>
           </li>
           <li>Use <a href="https://crypto.org/docs/wallets/ledger_desktop_wallet.html#staking-operation-with-ledger-device" target="_blank">Crypto.org&#x27;s guide</a> to create a wallet using the Desktop Wallet</li>
         </ul>
