--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <nav role="navigation" class="nav-menu-2 w-nav-menu">
                 <a href="index.html#Expertise" class="nav-link w-nav-link">Our Expertise</a>
-                <a href="index.html#Network" class="nav-link-2 w-nav-link">Our Network</a>
+                <a href="index.html#Network" class="nav-link-2 w-nav-link">Our Networks</a>
                 <a href="faq.html" class="nav-link-4 w-nav-link">FAQ</a>
                 <a href="mailto:chainmaster@cros-nest.com?subject=I%20want%20to%20delegate%20on%20Cro&#x27;s%20Nest%20" class="nav-link-5 w-nav-link">Contact</a>
             </nav>
@@ -85,14 +85,7 @@
             <div data-w-id="73954764-3167-a52e-869e-9555834dcd76" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                 class="w-layout-grid hero-content">
                 <div class="grid-column">
-                    <div style="display: flex; align-items: center; justify-content: center;">
-                        <div style="flex-basis:60%;">
-                            <img src="images/logo-nest.png" loading="lazy" alt="" class="icon">
-                        </div>
-                        <div style="padding-left:20px">
-                            <h1>Join the nest</h1>
-                        </div>
-                    </div>
+                    <h1 class="display-heading">Join the nest, our state-of-the-art infrastructure</h1>
                 </div>
                 <div class="grid-content">
                     <p class="paragraph-large">Peace of mind and pioneering excellence, enabling our users to nurture their savings, relieving them of the stress and cost of independent operating.<br></p>
@@ -119,17 +112,17 @@
             <div data-w-id="e8647368-3610-943e-cc6f-1e7c11734be9" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                 class="title-wrap-centre">
                 <h1>Our networks</h1>
-                <div class="subheading">click to delegate with Keplr or redirect to a tutorial</div>
+                <div class="subheading">click to delegate with Keplr or be redirected to a tutorial</div>
             </div>
             <div data-w-id="8ab7a4d3-42ab-df44-1b7f-3a42890a3a67" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                 class="w-layout-grid feature-grid">
                 <div class="feature-card w-inline-block">
-                    <div class="online"></div>
+                <div class="online"></div>
                     <div>
-                        <img src="images/token_cro.svg" loading="lazy" alt="" class="icon">
+                        <img src="images/token_cro.svg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <p class=featured>Featured</p>
                         <h4>Crypto.org chain</h4>
                         <p>A fully decentralized network with high speed and low fees</p>
-                        <p class=featured>Featured</p>
                         <p>current apr : <strong id="cro_apy"></strong></p>
                         <a href="https://wallet.keplr.app/#/crypto-org/stake?modal=detail&validator=crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8">
                             <p class=delegate>Delegate</p>
@@ -140,7 +133,7 @@
                 <div class="feature-card w-inline-block">
                     <div class="online"></div>
                     <div>
-                        <img src="images/token_kava.svg" loading="lazy" alt="" class="icon">
+                        <img src="images/token_kava.svg" loading="lazy" alt="" class="icon" style="height:70px">
                         <h4>Kava</h4>
                         <p>A fully integrated suite of financial products for crypto</p>
                         <p>Average yield 20% - 35%</p>
@@ -154,7 +147,7 @@
                 <div class="feature-card w-inline-block">
                     <div class="online"></div>
                     <div>
-                        <img src="images/token_fetch.svg" loading="lazy" alt="" class="icon">
+                        <img src="images/token_fetch.svg" loading="lazy" alt="" class="icon" style="height:70px">
                         <h4>Fetch.ai</h4>
                         <p>Artificial Intelligence for Blockchains</p>
                         <p>Average yield 25% - 40%</p>
@@ -168,10 +161,10 @@
                 <a href="https://www.desmos.network/" class="feature-card w-inline-block">
                     <div class="online"></div>
                     <div>
-                        <img src="images/token_desmos.svg" loading="lazy" alt="" class="icon">
+                        <img src="images/token_desmos.svg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <p class=featured>coming soon</p>
                         <h4>Desmos</h4>
                         <p>Decentralize the business model of social networks prioritizing the interests of users</p>
-                        <p class=featured>coming soon</p>
                         <p>Testnet participation</p>
                     </div>
                 </a>
@@ -231,10 +224,7 @@
         <div class="container">
             <div class="footer-wrap">
                 <div class="social-wrap">
-                    <a href="#" class="social-link w-inline-block"><img src="images/facebook-line-1.svg" loading="lazy" alt=""></a>
                     <a href="#" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/instagram-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/linkedin-line-1.svg" loading="lazy" alt=""></a>
                 </div>
                 <a href="#" class="text-link">2021 All right reserved</a>
                 <div class="link-wrap">
@@ -244,7 +234,7 @@
         </div>
         <div class="container">
             <div class="footer-wrap-2">
-                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org Blockchain. We are not affiliated to Crypto.com, Crypto.org, or any partner thereof.<br></div>
+                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org, Kava, Fetch.ai, and Desmos Blockchains. We are not affiliated to Crypto.com, Crypto.org, Kava, Fetch.ai, Desmos, or any partner thereof.<br></div>
             </div>
         </div>
     </div>
