--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <p class=featured>Featured</p>
                         <h4>Crypto.org chain</h4>
                         <p>A fully decentralized network with high speed and low fees</p>
-                        <p>current apr : <strong id="cro_apy"></strong></p>
+                        <p>current apr: <strong id="cro_apy"></strong></p>
                         <a href="https://wallet.keplr.app/#/crypto-org/stake?modal=detail&validator=crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8">
                             <p class=delegate>Delegate</p>
                         </a>
@@ -136,7 +136,7 @@
                         <img src="images/token_kava.svg" loading="lazy" alt="" class="icon" style="height:70px">
                         <h4>Kava</h4>
                         <p>A fully integrated suite of financial products for crypto</p>
-                        <p>Average yield 20% - 35%</p>
+                        <p>current apr: <strong id="kava_apy"></strong></p>
                         <a href="https://wallet.keplr.app/#/kava/stake?modal=detail&validator=kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda">
                             <p class=delegate>Delegate</p>
                         </a>
@@ -150,7 +150,7 @@
                         <img src="images/token_fetch.svg" loading="lazy" alt="" class="icon" style="height:70px">
                         <h4>Fetch.ai</h4>
                         <p>Artificial Intelligence for Blockchains</p>
-                        <p>Average yield 25% - 40%</p>
+                        <p>current apr: <strong id="fetch_apy"></strong></p>
                         <!-- <a href="https://explore.fetch.ai/validator/fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc"> -->
                         <a href="stake_fet.html">
                             <p class=delegate>Delegate</p>
