--- a/faq.html
+++ b/faq.html
@@ -249,17 +249,18 @@
         </div>
         <div class="container">
             <div class="footer-wrap-2">
-                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org Blockchain. We are not affiliated to Crypto.com, Crypto.org, or any partner thereof.<br></div>
+                <div class="footer-wrap-2">
+                    <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org, Kava, Fetch.ai, and Desmos Blockchains. We are not affiliated to Crypto.com, Crypto.org, Kava, Fetch.ai, Desmos, or any partner thereof.<br></div>
+                </div>
             </div>
         </div>
-    </div>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=60462746bc5a3edd8a55b221" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="js/webflow.js" type="text/javascript"></script>
-    <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
-    <script>
-    </script>
-    <script src="js/APY.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
+        <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=60462746bc5a3edd8a55b221" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="js/webflow.js" type="text/javascript"></script>
+        <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+        <script>
+        </script>
+        <script src="js/APY.js"></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.1/tabletop.min.js'></script>
 </body>
 
 </html>
