--- a/stake_fet_ledger.html
+++ b/stake_fet_ledger.html
@@ -428,7 +428,7 @@
         </div>
         <div class="container">
             <div class="footer-wrap-2">
-                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org Blockchain. We are not affiliated to Crypto.com, Crypto.org, or any partner thereof.<br></div>
+                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org, Kava, Fetch.ai, and Desmos Blockchains. We are not affiliated to Crypto.com, Crypto.org, Kava, Fetch.ai, Desmos, or any partner thereof.<br></div>
             </div>
         </div>
     </div>
