fix twitter link

--- a/stake_fet_ledger.html
+++ b/stake_fet_ledger.html
@@ -415,10 +415,7 @@
         <div class="container">
             <div class="footer-wrap">
                 <div class="social-wrap">
-                    <a href="#" class="social-link w-inline-block"><img src="images/facebook-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/instagram-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/linkedin-line-1.svg" loading="lazy" alt=""></a>
+                    <a href="https://twitter.com/crosnest_com" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
                 </div>
                 <a href="#" class="text-link">2021 All right reserved</a>
                 <div class="link-wrap">
