--- a/faq.html
+++ b/faq.html
@@ -236,10 +236,7 @@
         <div class="container">
             <div class="footer-wrap">
                 <div class="social-wrap">
-                    <a href="#" class="social-link w-inline-block"><img src="images/facebook-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/instagram-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/linkedin-line-1.svg" loading="lazy" alt=""></a>
+                    <a href="https://twitter.com/crosnest_com" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
                 </div>
                 <a href="#" class="text-link">2021 All right reserved</a>
                 <div class="link-wrap">
@@ -249,11 +246,10 @@
         </div>
         <div class="container">
             <div class="footer-wrap-2">
-                <div class="footer-wrap-2">
-                    <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org, Kava, Fetch.ai, and Desmos Blockchains. We are not affiliated to Crypto.com, Crypto.org, Kava, Fetch.ai, Desmos, or any partner thereof.<br></div>
-                </div>
+                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org, Kava, Fetch.ai, and Desmos Blockchains. We are not affiliated to Crypto.com, Crypto.org, Kava, Fetch.ai, Desmos, or any partner thereof.<br></div>
             </div>
         </div>
+    </div>
         <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=60462746bc5a3edd8a55b221" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="js/webflow.js" type="text/javascript"></script>
         <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
