--- a/guide.html
+++ b/guide.html
@@ -163,23 +163,17 @@
         <div class="container">
             <div class="footer-wrap">
                 <div class="social-wrap">
-                    <a href="#" class="social-link w-inline-block"><img src="images/facebook-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/instagram-line-1.svg" loading="lazy" alt=""></a>
-                    <a href="#" class="social-link w-inline-block"><img src="images/linkedin-line-1.svg" loading="lazy" alt=""></a>
+                    <a href="https://twitter.com/crosnest_com" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
                 </div>
                 <a href="#" class="text-link">2021 All right reserved</a>
                 <div class="link-wrap">
-                    <a href="#" class="text-link-terms">Terms &amp; Conditions</a>
                     <a href="privacy.html" class="text-link-legal">Privacy Policy</a>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="footer-wrap-2">
-                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.com Blockchain. We are neither affiliated nor endorsed by Crypto.com, Crypto.org, or any partner thereof.<br><br>*All users who register their pledge with us and stake a minimum
-                    of 5.000 CRO to our node on or before the last block fewer than 168 hours after mainnet launch will be entitled to reimbursement of any eventual slashing the node may incur, limited to 1 event every 24 hours and 2% across all reimbursements.
-                    In order to enjoy this benefit the user will be asked to communicate their CRO wallet address and the TX ID of their staking to the node. All benefits are permanently lost when the user withdraws their stake.<br></div>
+                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org, Kava, Fetch.ai, and Desmos Blockchains. We are not affiliated to Crypto.com, Crypto.org, Kava, Fetch.ai, Desmos, or any partner thereof.<br></div>
             </div>
         </div>
     </div>
