--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <div class="container">
             <div class="footer-wrap">
                 <div class="social-wrap">
-                    <a href="#" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
+                    <a href="https://twitter.com/crosnest_com" class="social-link w-inline-block"><img src="images/twitter-line-1.svg" loading="lazy" alt=""></a>
                 </div>
                 <a href="#" class="text-link">2021 All right reserved</a>
                 <div class="link-wrap">
