--- a/stake_fet_ledger.html
+++ b/stake_fet_ledger.html
@@ -141,7 +141,7 @@
         <div class="et_pb_column et_pb_column_3_5 et_pb_column_12  et_pb_css_mix_blend_mode_passthrough et-last-child">
             <div class="et_pb_module et_pb_text et_pb_text_10  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <p>You can then find your Fetch address by installing a Chrome browser and then following this <a href="https://explore.fetch.ai/" style="color: cornflowerblue" target="_blank" rel="noopener">link to the block explorer</a> on our test-net.
+                    <p>You can then find your Fetch address by installing a Chrome browser and then following this <a href="https://explore.fetch.ai/" style="color: cornflowerblue" target="_blank" rel="noopener">link to the block explorer</a>.
                         The address can then be found by following these steps:</p>
                 </div>
             </div>
@@ -153,14 +153,6 @@
     </div>
     <!-- .et_pb_row -->
     <div class="et_pb_row et_pb_row_6">
-        <div class="et_pb_column et_pb_column_2_5 et_pb_column_13  et_pb_css_mix_blend_mode_passthrough">
-            <div class="et_pb_module et_pb_text et_pb_text_11  et_pb_text_align_left et_pb_bg_layout_light">
-                <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 3</strong></h1>
-                </div>
-            </div>
-            <!-- .et_pb_text -->
-        </div>
         <!-- .et_pb_column -->
         <div class="et_pb_column et_pb_column_3_5 et_pb_column_14  et_pb_css_mix_blend_mode_passthrough et-last-child">
             <div class="et_pb_module et_pb_text et_pb_text_12  et_pb_text_align_left et_pb_bg_layout_light">
@@ -179,19 +171,11 @@
     </div>
     <!-- .et_pb_row -->
     <div class="et_pb_row et_pb_row_7">
-        <div class="et_pb_column et_pb_column_2_5 et_pb_column_15  et_pb_css_mix_blend_mode_passthrough">
-            <div class="et_pb_module et_pb_text et_pb_text_13  et_pb_text_align_left et_pb_bg_layout_light">
-                <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 4</strong></h1>
-                </div>
-            </div>
-            <!-- .et_pb_text -->
-        </div>
         <!-- .et_pb_column -->
         <div class="et_pb_column et_pb_column_3_5 et_pb_column_16  et_pb_css_mix_blend_mode_passthrough et-last-child">
             <div class="et_pb_module et_pb_text et_pb_text_14  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <p><span>Use your Chrome browser to <a href="https://explore.fetch.ai/" style="color: cornflowerblue" target="_blank" rel="noopener">visit the block explorer at this site.</a></span></p>
+                    <p><span>2. Use your Chrome browser to <a href="https://explore.fetch.ai/" style="color: cornflowerblue" target="_blank" rel="noopener">visit the block explorer at this site.</a></span></p>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -203,7 +187,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_17  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_15  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 5</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 3</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -213,6 +197,7 @@
             <div class="et_pb_module et_pb_text et_pb_text_16  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
                     <p><span>Click on the “key” icon in the top-right corner of the page, next to the language choice. This will ask for your permission to connect to the Ledger Nano. After approving the connection, you will be “signed into” the block explorer. After connecting, the “key” icon will become an avatar or “person” icon.</span></p>
+                    <br><p>(Windows users only) If you receive the error message <code>‘unable to reset device’</code>, <br>then in the address bar type this text: <code>chrome://flags/#new-usb-backend</code><br>and disable the <code>‘Enable new USB backend’<code> icon at the top of the page.</p>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -227,7 +212,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_19  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_17  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 6</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 4</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -251,7 +236,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_21  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_19  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 7</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 5</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -272,7 +257,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_23  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_21  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 8</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 6</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -294,7 +279,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_25  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_23  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 9</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 7</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -318,7 +303,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_27  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_25  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 10</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 8</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -339,7 +324,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_29  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_27  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 11</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 9</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -361,7 +346,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_31  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_29  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 12</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 10</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
@@ -382,7 +367,7 @@
         <div class="et_pb_column et_pb_column_2_5 et_pb_column_33  et_pb_css_mix_blend_mode_passthrough">
             <div class="et_pb_module et_pb_text et_pb_text_31  et_pb_text_align_left et_pb_bg_layout_light">
                 <div class="et_pb_text_inner">
-                    <h1 style="text-align: right;"><strong>STEP 13</strong></h1>
+                    <h1 style="text-align: right;"><strong>STEP 11</strong></h1>
                 </div>
             </div>
             <!-- .et_pb_text -->
