--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 class="title-wrap-centre">
                 <h1>Our networks</h1>
                 <div class="subheading">click to delegate with Keplr or be redirected to a tutorial</div>
+                <h5>Keplr is a browser extension wallet for the Inter blockchain ecosystem.</h5>
             </div>
             <div data-w-id="8ab7a4d3-42ab-df44-1b7f-3a42890a3a67" style="-webkit-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 55PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"
                 class="w-layout-grid feature-grid">
@@ -122,10 +123,18 @@
                         <img src="images/token_cro.svg" loading="lazy" alt="" class="icon" style="height:70px">
                         <p class=featured>Featured</p>
                         <h4>Crypto.org chain</h4>
+                        <code>crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8</code>
+                        <p></p>
                         <p>A fully decentralized network with high speed and low fees</p>
                         <p>current apr: <strong id="cro_apy"></strong></p>
                         <a href="https://wallet.keplr.app/#/crypto-org/stake?modal=detail&validator=crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8">
-                            <p class=delegate>Delegate</p>
+                            <p style="width:200px; margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
+                        </a>
+                        <a href="https://crypto.org/explorer/validator/crocncl15m2ae4c2ajpkz6hw0d4ucvwfyuwq8ns5z369u8">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                        <a href="guide.html">
+                            <p style="width:200px; margin-right: 5px; margin-left: 5px;" class=delegate>Delegation guide</p>
                         </a>
                     </div>
                 </div>
@@ -135,29 +144,56 @@
                     <div>
                         <img src="images/token_kava.svg" loading="lazy" alt="" class="icon" style="height:70px">
                         <h4>Kava</h4>
+                        <code>kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda</code>
+                        <p></p>
                         <p>A fully integrated suite of financial products for crypto</p>
                         <p>current apr: <strong id="kava_apy"></strong></p>
                         <a href="https://wallet.keplr.app/#/kava/stake?modal=detail&validator=kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda">
-                            <p class=delegate>Delegate</p>
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
+                        </a>
+                        <a href="https://www.mintscan.io/kava/validators/kavavaloper17jr6wyhm2twyph6d88l5ux945gwmf8vfkhckda">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                     </div>
                 </div>
-                </a>
 
                 <div class="feature-card w-inline-block">
                     <div class="online"></div>
                     <div>
                         <img src="images/token_fetch.svg" loading="lazy" alt="" class="icon" style="height:70px">
                         <h4>Fetch.ai</h4>
+                        <code>fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc</code>
+                        <p></p>
                         <p>Artificial Intelligence for Blockchains</p>
                         <p>current apr: <strong id="fetch_apy"></strong></p>
                         <!-- <a href="https://explore.fetch.ai/validator/fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc"> -->
                         <a href="stake_fet.html">
-                            <p class=delegate>Delegate</p>
+                            <p class=delegate>Delegation guide</p>
+                        </a>
+                        <a href="https://explore.fetch.ai/validator/fetchvaloper1a7l5xar7vyymvahfelar6vtkdar5x9a54l7zvc">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
                         </a>
                     </div>
                 </div>
-                </a>
+
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/token_osmosis.svg" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Osmosis</h4>
+                        <code>osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04</code>
+                        <p></p>
+                        <p>Automated market maker for interchain</p>
+                        <p>current apr: <strong id="osmosis_apy"></strong></p>
+                        <a href="https://wallet.keplr.app/#/osmosis/stake?modal=detail&validator=osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
+                        </a>
+                        <a href="https://www.mintscan.io/osmosis/validators/osmovaloper1u6jr0pztvsjpvx77rfzmtw49xwzu9kas05lk04">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
+
                 <a href="https://www.desmos.network/" class="feature-card w-inline-block">
                     <div class="online"></div>
                     <div>
