--- a/index.html
+++ b/index.html
@@ -194,17 +194,6 @@
                         </a>
                     </div>
                 </div>
-
-                <a href="https://www.desmos.network/" class="feature-card w-inline-block">
-                    <div class="online"></div>
-                    <div>
-                        <img src="images/token_desmos.svg" loading="lazy" alt="" class="icon" style="height:70px">
-                        <p class=featured>coming soon</p>
-                        <h4>Desmos</h4>
-                        <p>Decentralize the business model of social networks prioritizing the interests of users</p>
-                        <p>Testnet participation</p>
-                    </div>
-                </a>
             </div>
         </div>
     </div>
@@ -271,7 +260,7 @@
         </div>
         <div class="container">
             <div class="footer-wrap-2">
-                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org, Kava, Fetch.ai, and Desmos Blockchains. We are not affiliated to Crypto.com, Crypto.org, Kava, Fetch.ai, Desmos, or any partner thereof.<br></div>
+                <div class="text-block-2">Cros-Nest is an independent entity operating on the Crypto.org, Kava, and Fetch.ai Blockchains. We are not affiliated to Crypto.com, Crypto.org, Kava, Fetch.ai, or any partner thereof.<br></div>
             </div>
         </div>
     </div>
