--- a/index.html
+++ b/index.html
@@ -194,6 +194,22 @@
                         </a>
                     </div>
                 </div>
+                <div class="feature-card w-inline-block">
+                    <div class="online"></div>
+                    <div>
+                        <img src="images/cosmos.png" loading="lazy" alt="" class="icon" style="height:70px">
+                        <h4>Atom</h4>
+                        <code>cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag</code>
+                        <p></p>
+                        <p>The Internet of Blockchains</p>
+                        <a href="https://wallet.keplr.app/#/cosmoshub/stake?modal=detail&validator=cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Delegate with Keplr</p>
+                        </a>
+                        <a href="https://www.mintscan.io/cosmos/validators/cosmosvaloper1fsg635n5vgc7jazz9sx5725wnc3xqgr7awxaag">
+                            <p style="margin-right: 5px; margin-left: 5px;" class=delegate>Explorer</p>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
